test_regress/t/t_randomize_nested_unsup.out
%Error-UNSUPPORTED: t/t_randomize_nested_unsup.v:17:41: Unsupported: randomize() nested in inline randomize() constraints
   17 |     if (a.randomize() with {rdata == aa.randomize();} == 0) $stop;
      |                                         ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
